force-app/main/default/objects/Retail_Kissan__c/Retail_Kissan__c.object-meta.xml
<CustomObject>
    <label>Retail Kisan Lead Form</label>
    <nameField>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Kisan Lead Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>