force-app/main/default/objects/Retail_Kissan__c/fields/Add_Lead__c.field-meta.xml
<CustomField>
    <fullName>Add_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Lead</label>
    <referenceTo>Retail_Lead__c</referenceTo>
    <relationshipLabel>Retail Kisan Lead Forms</relationshipLabel>
    <relationshipName>Retail_Kisan_Lead_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>