force-app/main/default/objects/Retail_Kissan__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>District</label>
    <referenceTo>Retail_District__c</referenceTo>
    <relationshipLabel>Retail Kisan Lead Forms</relationshipLabel>
    <relationshipName>Retail_Kisan_Lead_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>