force-app/main/default/objects/Retail_Kissan__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail Kisan Lead Forms</relationshipLabel>
    <relationshipName>Retail_Kisan_Lead_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>