force-app/main/default/objects/Retail_Kissan__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Village</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>